--- a/english/time1000.md
+++ b/english/time1000.md
@@ -1,2 +1,2 @@
-### 45 a. formidable
+## 45 a. formidable
 + "Perot as kingmaker," he says tactfully, "is a more formidable proposition than Perot as candidate.
