--- a/english/time1000.md
+++ b/english/time1000.md
@@ -1,2 +1,332 @@
+TIME 1000
+vocabulary
+
+## 108 a. volatile
++ When properly combined, three volatile elements generate American celebrity: the media, the public and the spinmeister who manipulate them.
++ spinmeister
++ manipulate
+
+## 187 v. generate
++ The energy of the flywheel is stored in this rapid rotation, which generates electricity on demand.
+
+## 680 n. celebrity
++ A master at elevating his own celebrity. Calvin Klein may be one of the most recognizable names anywhere in the world.
+
+## 256 v. submit
++ Last week House Speaker Newt Gingrich sent Clinton a letter urging him to submit within a month a plan outlining the cuts he would make to balance the budget in seven years
+
+## 298 n. credibility
++ Whatever the reasons , the fact remains that the organization (U. N) desperately needs a rapid reaction capability if it is to maintain credibility in emergencies. 
+
+## 1028 n. pundits
++ Some pundits speculate that many computers are obsolete before they’re even designed, which goes a long way toward explaining why the ATM at my grocery store never works. 
++ speculate
++ grocery
++ to go a long way toward ... 对...大有帮助作用
+
+## 61 a. obsolete
++ Indeed, your average computer is virtually obsolete by the time it is shipped from the factory to the retail store. 
++ virtually
+
+## 356 n. retail
++ Some estimates place the overall movie tie-in business at $10 billion annually in retail sales worldwide. 
+tie-in
+
+## 303 n. emergency
++ President Kim Young Sam worried. The Korean economy, he gravely told a July 2 emergency ministerial meeting, “is in trouble. “
++ gravely
++ ministerial
+
+## 238 v. resume
++ A network of satellite-linked computer system will guide the car safely to the exit, at which point the driver will resume control to the final destination.
+
+## 295 n. conflict
++ Even though Chechnya could not hope to win its secessionist war against Moscow, Dudayev warned that continued frighting might well draw neighboring republics into a wider regional conflict.
++ secessionist
+
+## 77 a. prominent
++ Abe Lincoln was a prominent railroad lawyer in 1860, but he campaigned for the White House as the simple Midwestern rail-splitter.
++ rail-splitter
+
+## 285 n. campaign
++ Only once did Bill Clinton raise a significant example of foreign policy. That came in the campaign’s final fortnight, when he proposed that NATO begin admitting Central and East European nations to the Atlantic alliance by 1999. 
+
+## 90 a. significant
++ The President’s ambition to stand taller in the world faces one significant U. S.  made handicap: brutal cutbacks in funding American foreign policy. 
++ brutal
++ cutback
++ funding
+
+## 715 n. handicap
++ “Enjoy life,” he (Magic Johnson) says. “Live. I’m not just talking about people with HIV or AIDS, but about people with problems or handicaps or whatever. “
+
+## 185 v. fund
++ S. Fred Singer, president of the industry-funded Science and Environment Policy Project, argus that Epstein and his colleagues fail to note the positive health benefits of warmer nights and winters. 
+
+## 805 a. go ballistic
++ In short, do household pets really have a mental and emotional life? Their owners think so, but until recently, animal-behavior experts would have gone ballistic on hearing such a question. 
+
+## 428 a. initial
++ Clouds and dust from the (comet’s) initial impact and gases from subsequent volcanoes could have spread around the globe, blocking sunlight and altering the climate, killing off the dinosaurs. 
++ subsequent
+
+## 859 a. ubiquitous
++ The city’s seemingly ubiquitous status of communist-era heroes...have been disdainfully torn down. Gone too are the metronomic-boot clicks of the goose-stepping guard outside Lenin’s tomb...
++ disdainfully
++ metronomic
++ goose-stepping
++ tomb
+
+## 884 v. click
++ Its (Netscape’s) killer application was a program that made navigating the Net as simple as pointing at what you wanted to see and clicking on it. 
+
+## 994 n. feat
++ It’s worth nothing that establishing growth at a company the size of IBM — with $72 billion  in sales last year, it is the 18th largest on the planet — is no mean feat. 
++ no mean
+
+## 420 a. giddy
++ Clark and Andreessen find themselves riding the decade’s giddiest economic bubble, counting their stock options and cutting deals with everyone from telephone companies to Hollywood. 
++ stock options
+
+## 861 a. unfettered
++ We don’t live under free, unfettered capitalism. Isn’t that why we have antitrust laws?
++ antitrust
+
+## 273 n. access
++ Theoretically at least, whole populations will have direct access to information without waiting for it to be filtered through a government, or press. 
++ Theoretically
+
+## 233 v. resemble
++ Ask Bill Gates about something he wants to talk about ... and he acts like the teenage boy that he still resembles. He grins. His voice breaks. 
++ grin
+
+## 183 v. frustrate
++ For the Republicans in the House, the past two month have been a frustrated lesson in the meaning of checks and balances. 
++ Republican
+
+## 237 v. restore 
++ Mexican President Ernesto Zedilo’s plan to restore stability to his country’s wounded economy was rejected by investors for its lack of specific remedies, causing the peso to fall to a record low against the dollar by week’s end. 
++ wound
++ remedy
+
+## 247 v. spark
++ Chirac’s task now is to heal the wounds of a bruising campaign, restore public confidence and spark a job-creating burst of economic growth. 
++ bruising
++ a burst of
+
+## 755 n. pinnacle
++ We asked each other to select his or her choice of the five greatest Olympians and to tell us precisely the qualities that place them at the very pinnacle.
++ precisely
+
+## 320 n. impulse
++ Online shopping centers are springing up everywhere, inviting customers to use their credit cards to buy on impulse, without even leaving there chairs. 
++ to spring up
+
+## 281 n. bailout
++ In Washington the Clinton Administration’s proposed $40 billion bailout of the weakened peso met with stiff opposition from Democrats. 
++ stiff
++ Democrats
+
+**********************************************
+
+## 1 a. accustomed
++ Even if they are willing to make the sacrifice in dollars, Whether Americans will give up long personal liberties is another question.
++ sacrifice
++ liberties
+
+## 2 a. affluent
++ Lesson and his wife Lisa never really seem to fit into the affluent, neo-colonial life style of Singapore or into the city's multiethnic society.
++ neo
++ colonial
++ multiethnic
+
+## 3 a. ambiguous
++ Truman got Korean War because he was ambiguous, and Saddom took Kuwait because Bush did't say "No" straight out.
+
+## 4 a. anonymous
++ So he went on his own fact-finding mission, learning heavily on a 49-page white paper submitted last month by three anonymous high-tech firms. 
+
+## 5 a. appropriate
++ So any protein that dissolves new blood vessels may not appropriate for younger women who have not yet entered menopause. 
++ menopause
+
+## 6 a. at stack
++ At a news conference, (U. S. Undersecretary of Defense) Perry declared that credibility of international community (NATO) was at stack. 
+
+## 7 a. available
++ Most of the smart cards available in Atlanta will be worth  betweent $10 and $50 and will be usable stead of cash at as many as 5000 "points of purchase" throughout the city.
+
+## 8 a. bear
++ Meanwhile, pundits who do make a bear stand don’t last. 
+
+## 9 a. bilateral
++ He will halt bilateral contact with North Korean until Pyongyang resumed negotiations with South Korean.
+negotiation
+
+## 10 a. bland
++ As a  result news coverage trends to be bland.
+
+## 11 a. blunt
++ Clinton’s summation was startlingly blunt:” It is better to have reached no agreement (on Japan’s opening its domestic market) than to have reached an empty agreement. “
++ startlingly
+
+## 12 a. bull
++ The bull market will end — but when is the question
+
+## 13 a. burgeoning
++ Genetic information is the raw material of the burgeoning biotechnology industry, which uses human DNA to build specialized proteins that may have some value as disease-frighting drugs. 
+
+## 14 a. coherent 
++ Curry... impressd Colinton with his ability to fashion a coherent policy message that synthesized the often conflicting interests of the party's traditional and moderate wings. 
++ synthesized
++ moderate
++ wing
+
+## 15 a. comprehensive 
++ Grove develived a sharp, comprehansive report. His bosses were impressed.
+
+## 16 a. compulsory
++ In 1919 while serving a compulsory stint in the military, Nurmi entered a 20-k march carrying a rifle, a cartridge belt and a knapsack filled with 5 kg of send.
++ stint 
++ military 
++ cartridge
++ knapsack
+
+## 17 a. conciliatory
++ The executive director of the Christian Coalition told a prominent Jewish audience, in a conciliatory speech, that calling U.S. a "Christian nation" is wrong ...
++ coalition
++ Christian
+
+## 18 a. conscious
++ Times Books recently announced that it will publish a book of socially-conscious poetry by former President Jimmy Cater. 
+
+## 19 a. conventional
++ The voice-recognition technology will not be on conventional desktop computers only; it will be available in any sort of electronic information processing device. 
+
+## 20 a. critical
++ “We have only the foggiest idea,” the independent daily Segodnya complained last week, “who is actually at the helm in this country, who is making the critical decisions. “
++ foggy
++ helm
+
+## 21 a. crucial
++ Understanding social cues, creating works of art and spawning inventions are all crucial mental tasks that bear little relationship to how well a person can fill in a printed test form. 
++ cue
+
+## 22 a. cunning
++ Perhaps the most cunning Disney trick is to take fairy tales in the public domain and reinvent them as corporate property. A billion-dollar example is Beauty and the Beast. 
+
+## 23 a. dazzling
++ With computers doubling in speed and power every couple of years, and with genetic engineering’s dazzling feats growing more and more routine, the battered American faith in technological progress has been growing stronger and giddier of late. 
++ batter
++ faith
+
+## 24 a. dedicated
++ In Singapore, dedicated Net users are planning to maintain unfettered access by jumping borders and dialing services in neighboring Malaysia. 
+
+## 25 a. desperately
++ Bereft of patrons, desperately to rescue his economy, Fidel Castro turns to an unusual solution. 
+bereft
++ patrons
+
+## 26 a. determined
++ Author Joe Kane came across a determined priest, a Spaniard who had spent years teaching a tribe of hunter gatherers, the Huaorani, how to survive outside their rainforest habitat. 
++ priest 
++ Spaniard 
++ a tribe of hunter gatherers
++ rainforest habitat
+
+## 27 a. disabled
++ Seven years ago, Dole spoke about the need to “provide care and assistance for the hungry and homeless and the disabled. “ Nothing resembling that was heard last week. 
+
+## 28 a. disastrous
++ The Kobe quake was only slightly bigger than the Northridge tremor but more disastrous. 
+tremor
+
+## 29 a. distinct
++ Many scientists consider the Khoisan a distinct race of very ancient origin. 
+
+## 30 a. dominant
++ Now as then, the splintering of a Saddam-less Iraq would leave Iran the dominant gulf power, an unpalatable solution. 
++ splinter
++ unpalatable
++ Now as then
+
+## 31 a. doomed
++ He started at the top of, of course, but the fact that he is staying there has frustrated the popular wisdom that an early front runner is doomed to fall. 
+frustrate the popular wisdom
++ wisdom
++ front runner
+
+## 31 a. doomed
++ At the beginning of May 1945 it was clear to even the most zealous of Hitler’s followers that his “Thousand Year Reich” was doomed. 
++ zealous
++ reich
+
+## 32 a. drastic
++ The New Deal welfare safety net installed in the 1930s and augmented in the Great Society programs of the 1960s has been hauled off for the kind of drastic restitching that France, Germany, Italy and Sweden have been laboring over for the past year or more. 
++ augment
++ to haul off
++ restitching
+
+## 33 n. eccentric
++ The eccentric, fact-based best seller Midnight In the Garden of Good and Evil sparks a rush to see where it all took place. 
+
+## 34 a. elevated
++ It turns out, however, that not every man who reached the pinnacle of American leadership was a gleaming example of self-awareness, empathy, impulse control and other qualities that mark an elevated EQ.
++ gleaming
++ empathy
+
+## 35 a. elite
++ Ideally, the U. N. should have a small, elite, standing rapid-deployment force...trained and ready to go at once to a trouble spot that the Security Council has decided to become involved in. 
+
+## 36 a. enduring
++ The plain, undecorated object, representing the enduring role art has played throughout China’s history, takes pride of place in the sumptuous Splendors of Imperial China, which opened last week at New York City Metropolitan Museum of Art. 
++ undecorated
++ representing
++ to take pride of place
++ sumptuous
++ splendors
++ imperial
++ metropolitan
+
+## 37 a. explicit
++ But they won’t be able to filter the Internet. They’re explicit about that. 
+
+## 38 a. exquisite
++ The show also includes an exquisite Seurat-seascape, some notable Cezannes and considerable paintings by Courbet, Gauguin, VanGogh and others.
+
+## 39 a. extravagant
++ Could this fate befall James Cameron, Hollywood's most daring and extravagant auteur?
++ befall
++ auteur 
+
+## 40 a. fantastic
++ Becaus of its fantasic capacity to see all possible combinations some distance into the future, the machine (Deep Blue), once it determines that its own position is safe, can take the kind of attacking chances no human world.
+
+## 41 a. ferocious
++ This puts Clinton in something of a no-win situation: he is unlikely to gain much credit if the bailout succeeds, but will catch ferocious flak if it fails.
+flak
+
+## 42 a. flamboyant
++ He is probably the least flamboyant of the Republican contenders. 
++ contender
+
+## 43 a. fledgling
++ Early in the century, a fledgling effort at behavioral genetics divided people into such classes as mesomorphs — physically robust, psychologically assertive — and ectomorphs — skinny, nervous, shy. 
++ genetics
++ mesomorphs
++ physically
++ robust
++ psychologically
++ assertive
++ ectomorphs
++ skinny
++ shy
+
+## 44 a. fluid
++ Information...is now too fluid to control. It flows in over airways, via satellite, through microwave relays to cellular phone, faxes, televisions, radios, beepers, modems. 
+
 ## 45 a. formidable
 + "Perot as kingmaker," he says tactfully, "is a more formidable proposition than Perot as candidate.
+
+￼
