--- a/english/time1000.md
+++ b/english/time1000.md
@@ -329,11 +329,9 @@ flak
 ## 45 a. formidable
 + "Perot as kingmaker," he says tactfully, "is a more formidable proposition than Perot as candidate.
 
-￼## 46 a. fragile
+## 46 a. fragile
 + A revenue-generating franchise is the most fragile thing in the world ... No matter how good your product, you are only 18 months away from failure.
-```
 <details>
 <summary><mark><font color=darkred>点击查看详细内容</font></mark></summary>
 
 </details>
-```
