--- a/english/time1000.md
+++ b/english/time1000.md
@@ -330,8 +330,14 @@ flak
 + "Perot as kingmaker," he says tactfully, "is a more formidable proposition than Perot as candidate.
 
 ## 46 a. fragile
-+ A revenue-generating franchise is the most fragile thing in the world ... No matter how good your product, you are only 18 months away from failure.
 <details>
-<summary><mark><font color=darkred>点击查看详细内容</font></mark></summary>
-
+<summary><mark><font color=darkred>Example</font></mark></summary>
+A revenue-generating franchise is the most fragile thing in the world ... No matter how good your product, you are only 18 months away from failure.
 </details>
+<details>
+<summary><mark><font color=darkred>Translation</font></mark></summary>
+（情势）脆弱的，禁不起外力冲击的
+世界上最不可靠的，莫过于来自特许经销权的收入。产品再好，也只有18个月免于淘汰的安全期。
+</details>
+
+## 47 a. futile
