--- a/english/time1000.md
+++ b/english/time1000.md
@@ -331,7 +331,7 @@ flak
 
 ## 46 a. fragile
 <details>
-<summary><mark><font color=darkred>Example</font></mark></summary>
+<summary>Example</summary>
 A revenue-generating franchise is the most fragile thing in the world ... No matter how good your product, you are only 18 months away from failure.
 </details>
 <details>
