--- a/english/time1000.md
+++ b/english/time1000.md
@@ -335,7 +335,7 @@ flak
 A revenue-generating franchise is the most fragile thing in the world ... No matter how good your product, you are only 18 months away from failure.
 </details>
 <details>
-<summary><mark><font color=darkred>Translation</font></mark></summary>
+<summary>Translation</summary>
 世界上最不可靠的，莫过于来自特许经销权的收入。产品再好，也只有18个月免于淘汰的安全期。
 </details>
 
