--- a/english/time1000.md
+++ b/english/time1000.md
@@ -324,10 +324,20 @@ flak
 + shy
 
 ## 44 a. fluid
-+ Information...is now too fluid to control. It flows in over airways, via satellite, through microwave relays to cellular phone, faxes, televisions, radios, beepers, modems. 
+<details><summary>Example</summary>
+Information...is now too fluid to control. It flows in over airways, via satellite, through microwave relays to cellular phone, faxes, televisions, radios, beepers, modems.
+</details>
+<details><summary>Translation</summary>
+今日的资讯流动性太大，已经不可能管制。资讯传送方式很多，可以经由空中、卫星、微波转接，也可以通过移动电话、传真机、电视、收音机、传呼机与调制解调器。
+</details>
 
 ## 45 a. formidable
-+ "Perot as kingmaker," he says tactfully, "is a more formidable proposition than Perot as candidate.
+<details><summary>Example</summary>
+"Perot as kingmaker," he says tactfully, "is a more formidable proposition than Perot as candidate.
+</details>
+<details><summary>Translation</summary>
+他委婉地说道：“佩罗替人抬轿助选，要比他自己出来参选更难缠。”
+</details>
 
 ## 46 a. fragile
 <details><summary>Example</summary>
