update 1000 and add linux

--- a/english/time1000.md
+++ b/english/time1000.md
@@ -312,16 +312,12 @@ flak
 + contender
 
 ## 43 a. fledgling
-+ Early in the century, a fledgling effort at behavioral genetics divided people into such classes as mesomorphs — physically robust, psychologically assertive — and ectomorphs — skinny, nervous, shy. 
-+ genetics
-+ mesomorphs
-+ physically
-+ robust
-+ psychologically
-+ assertive
-+ ectomorphs
-+ skinny
-+ shy
+<details><summary>Example</summary>
+Early in the century, a fledgling effort at behavioral genetics divided people into such classes as mesomorphs — physically robust, psychologically assertive — and ectomorphs — skinny, nervous, shy. 
+</details>
+<details><summary>Translation</summary>
+本世纪初，在行为遗传学方面的一项初步研究将人分为运动型体格（身体壮硕，好坚持已见）以及清瘦型体格（身体瘦削，神经紧张，好害羞）。
+</details>
 
 ## 44 a. fluid
 <details><summary>Example</summary>
@@ -348,3 +344,9 @@ A revenue-generating franchise is the most fragile thing in the world ... No mat
 </details>
 
 ## 47 a. futile
+<details><summary>Example</summary>
+Indeed, for all the world's governments, ... attempts to control the global flow of electroinformation are not only futile but counter productive as well.
+</details>
+<details><summary>Translation</summary>
+试图控制电子资讯的全球流动，不仅枉然而且会带来副作用，对世界各国政府而言，这是毋庸置疑的事。
+</details>
