--- a/english/time1000.md
+++ b/english/time1000.md
@@ -308,8 +308,12 @@ frustrate the popular wisdom
 flak
 
 ## 42 a. flamboyant
-+ He is probably the least flamboyant of the Republican contenders. 
-+ contender
+<details><summary>Example</summary>
+He is probably the least flamboyant of the Republican contenders. 
+</details>
+<details><summary>Translation</summary>
+共和党各角逐者中，他大概是最不受瞩目的。
+</details>
 
 ## 43 a. fledgling
 <details><summary>Example</summary>
