--- a/english/time1000.md
+++ b/english/time1000.md
@@ -304,8 +304,12 @@ frustrate the popular wisdom
 + Becaus of its fantasic capacity to see all possible combinations some distance into the future, the machine (Deep Blue), once it determines that its own position is safe, can take the kind of attacking chances no human world.
 
 ## 41 a. ferocious
-+ This puts Clinton in something of a no-win situation: he is unlikely to gain much credit if the bailout succeeds, but will catch ferocious flak if it fails.
-flak
+<details><summary>Example</summary>
+This puts Clinton in something of a no-win situation: he is unlikely to gain much credit if the bailout succeeds, but will catch ferocious flak if it fails.
+</details>
+<details><summary>Translation</summary>
+紧急贷款如果成功，克林顿不会因此博得美名；如果失败，则会遭到猛烈地抨击；由此看来，克林顿有些像是两头不讨好。
+</details>
 
 ## 42 a. flamboyant
 <details><summary>Example</summary>
