--- a/english/time1000.md
+++ b/english/time1000.md
@@ -301,7 +301,12 @@ frustrate the popular wisdom
 + auteur 
 
 ## 40 a. fantastic
-+ Becaus of its fantasic capacity to see all possible combinations some distance into the future, the machine (Deep Blue), once it determines that its own position is safe, can take the kind of attacking chances no human world.
+<details><summary>Example</summary>
+Because of its fantasic capacity to see all possible combinations some distance into the future, the machine (Deep Blue), once it determines that its own position is safe, can take the kind of attacking chances no human world.
+</details>
+<details><summary>Translation</summary>
+“深蓝”电脑因为具有预见未来所有可能组合的惊人能力，一旦认定自己的位置安全，便敢冒着人类不敢冒的风险而进攻。
+</details>
 
 ## 41 a. ferocious
 <details><summary>Example</summary>
