--- a/english/time1000.md
+++ b/english/time1000.md
@@ -296,9 +296,12 @@ frustrate the popular wisdom
 + The show also includes an exquisite Seurat-seascape, some notable Cezannes and considerable paintings by Courbet, Gauguin, VanGogh and others.
 
 ## 39 a. extravagant
-+ Could this fate befall James Cameron, Hollywood's most daring and extravagant auteur?
-+ befall
-+ auteur 
+<details><summary>Example</summary>
+Could this fate befall James Cameron, Hollywood's most daring and extravagant auteur?
+</details>
+<details><summary>Translation</summary>
+这个恶运有可能降临詹姆斯·卡梅隆这位好莱坞最大胆、最爱花钱的大导演身上吗？
+</details>
 
 ## 40 a. fantastic
 <details><summary>Example</summary>
