--- a/english/time1000.md
+++ b/english/time1000.md
@@ -293,7 +293,12 @@ frustrate the popular wisdom
 + But they won’t be able to filter the Internet. They’re explicit about that. 
 
 ## 38 a. exquisite
-+ The show also includes an exquisite Seurat-seascape, some notable Cezannes and considerable paintings by Courbet, Gauguin, VanGogh and others.
+<details><summary>Example</summary>
+The show also includes an exquisite Seurat-seascape, some notable Cezannes and considerable paintings by Courbet, Gauguin, VanGogh and others.
+</details>
+<details><summary>Translation</summary>
+这次展出的作品，包括一副修拉的出色海景图，数副塞尚名画，及库尔贝、高更、梵高等人的不少画作。
+</details>
 
 ## 39 a. extravagant
 <details><summary>Example</summary>
